feat: Rename Analytics Artifacts - MEED-6999 - Meeds-io/meeds#2097 (#498)